--- a/doc/03-Algorithm.tex
+++ b/doc/03-Algorithm.tex
@@ -419,6 +419,24 @@ $|\alpha| < \frac{2}{3} \min(|\beta|, |\gamma|)$,
 $|\gamma| < \frac{2}{3} \min(|\alpha|, |\beta|)$ or
 $|\beta| > \frac{3}{2} \max(|\alpha|, |\gamma|)$.
 
+\begin{figure*}[ht]
+  \centering
+  \includegraphics[width=\linewidth]{gilbert3d_examples.pdf}
+  \caption{ ... }
+  \label{fig:examples3d}
+\end{figure*}
+
+
+Figure \ref{fig:examples3d} shows curated example curves for dimensions.
+Example \textit{i} shows a Gilbert curve of $(4 \times 4 \times 4)$, reducing to a Hilbert curve of the same dimension.
+Examples \textit{ii}, \textit{iii} and \textit{iv} show Gilbert curves of $(4 \times 4 \times 5)$, $(5 \times 5 \times 5)$
+and $(6 \times 6 \times 6)$ showing a $J_1$, $J_2$ and $J_0$ split, respecitvely.
+An $S_0$, $S_2$ and $S_1$ split are showing in the \textit{v}, \textit{vi} and \textit{vii} Gilbert curves of
+lengths $(8 \times 4 \times 4)$, $(3 \times 5 \times 3)$ and $(3 \times 3 \times 5)$ respectively.
+A Gilbert curve with an unavoidable notch is 
+shown in \textit{viii}, where the side lengths $(5 \times 4 \times 4)$ preclude a Hamiltonian path from $(0,0,0)$ to $(4,0,0)$.
+
+
 The constants used to determine eccentricity are chosen by considering the \textit{average defect} of the subdivided cuboid volumes.
 We use the term \textit{defect} to mean the ratio of volume of a cuboid region to the cube of its smallest length.
 That is:
