--- a/doc/03-Algorithm.tex
+++ b/doc/03-Algorithm.tex
@@ -364,13 +364,13 @@ When considering a cuboid region to trace out a Gilbert curve on, there are conc
   \includegraphics[width=\textwidth]{gilbert3d_case.pdf}
   \caption{ Bulk recursion J-split atlas for the 3D Gilbert algorithm. A subscript of $2e$ is used to denote a preference
   to coerce the length even where as the subscript $2u$ is used to denote a preference to coerce the length odd.
-  The subscript $2e+$ is the remainder of the axis after removing the $2e$ portion (e.g. $\alpha_{2e+} = \alpha - \alpha_{2e}$.
-  The subscript $2u+$ is the remainder of the axis after removing the $2u$ portion (e.g. $\beta_{2u+} = \beta - \beta_{2u}$.
+  The subscript $2e+$ is the remainder of the axis after removing the $2e$ portion (e.g. $\alpha_{2e+} = \alpha - \alpha_{2e}$).
+  The subscript $2u+$ is the remainder of the axis after removing the $2u$ portion (e.g. $\beta_{2u+} = \beta - \beta_{2u}$).
   The parity of the original cuboid volume are shown in the left most, assembled, volume, for each of the rows.
   The local axis for each of the subdivided cuboid regions is shown underneath them, with a white dot
   denoting the ``width-like'' axis, a solid line denoting the ``height-like'' dimension and a dotted line
   denoting the ``depth-like'' dimension. For each of the cuboids, the block dot denotes the start of the path
-  and the white dot denotes the path end. A red cross is used to show when a Hamiltonian path is inadmissible within a cuboid volume.  }
+  and the white dot denotes the path end. A red cross is used to show when a Hamiltonian path is not possible within a cuboid volume.  }
   \label{fig:gilbert3DCase}
 \end{figure*}
 
@@ -422,7 +422,18 @@ $|\beta| > \frac{3}{2} \max(|\alpha|, |\gamma|)$.
 \begin{figure*}[ht]
   \centering
   \includegraphics[width=\linewidth]{gilbert3d_examples.pdf}
-  \caption{ ... }
+  \caption{ Examples
+  of 3D Gilbert curves highlighting different aspects of the algorithm.
+  i) $(4 \times 4 \times 4)$, equivalent to the Hilbert curve of the same side lengths.
+  ii) $(4 \times 4 \times 5)$ show a $J_1$ split subdivision scheme.
+  iii) $(5 \times 5 \times 5)$, shows a $J_2$ split subdivision scheme.
+  iv) $(6 \times 6 \times 6)$, shows a $J_0$ subdivision scheme.
+  v) $(8 \times 4 \times 4)$, shows an $S_0$ subdivision scheme, splitting on the $\alpha$ dimension.
+  vi) $(3 \times 5 \times 3)$, shows an $S_2$ subdivision scheme.
+  vii) $(3 \times 3 \times 5)$, shows an $S_1$ subdivision scheme.
+  viii) $(5 \times 4 \times 4)$, shows an example of a configuration where a diagonal move (\textit{notch}) is formed
+  as there's no Hamiltonian path possible for the given endpoints.
+  }
   \label{fig:examples3d}
 \end{figure*}
 
