--- a/doc/06-References.bib
+++ b/doc/06-References.bib
@@ -495,3 +495,13 @@
   keywords = {Hilbert curves, Space filling curves, Algorithms},
   abstract = {In this paper we define a new compact Hilbert index which, while maintaining all of the advantages of the standard Hilbert curve, permits spaces with unequal dimension cardinalities. The compact Hilbert index can be used in any application that would have previously relied on Hilbert curves but, in the case of unequal side lengths, provides a more memory efficient representation. This advantage is particularly important in distributed applications (Parallel, P2P and Grid), in which not only is memory space saved but communication volume is significantly reduced.}
 }
+
+@book{madras_2013,
+  title={The Self-Avoiding Walk},
+  author={Madras, N. and Slade, G.},
+  isbn={9781461241324},
+  series={Probability and Its Applications},
+  url={https://books.google.com/books?id=JsoFCAAAQBAJ},
+  year={2013},
+  publisher={Birkh{\"a}user Boston}
+}
