--- a/doc/01-Introduction.tex
+++ b/doc/01-Introduction.tex
@@ -80,13 +80,13 @@ A \textit{Hamiltonian path} is a valid path through a graph that visits every ve
 and ending at pre-specified points.
 
 A curve restricted to a rectangular region $( N _ x, N _ y, N _ z)$,  $N = (N _ x \cdot N _ y \cdot N _ z)$
-is said to have a Hamiltionian path \textit{feasible} if there exists a Hamitlonian path, with endpoints specified,
-that hits every vertex within the restricted the rectrangular region exactly once, starts at the specified start
+is said to have a Hamiltonian path \textit{feasible} if there exists a Hamiltonian path, with endpoints specified,
+that hits every vertex within the restricted the rectangular region exactly once, starts at the specified start
 point, $\omega_0$ and ends at the specified endpoint $\omega_{N-1}$.
 A region that cannot have a Hamiltonian path, with the specified endpoints, is said to be \textit{infeasible}.
 
 A consequence of the Hahn-Mazurkiewicz \cite{sagan_1994} one can map the unit interval to a three dimensional
-cube if and only if the mapped to space is compact, conneted and locally connected.
+cube if and only if the mapped to space is compact, connected and locally connected.
 We concern ourselves with the concept of \textit{local connectivity} with attention to approximations
 to finite realizations of curves on the 2D and 3D lattice.
 
