--- a/doc/03-Algorithm.tex
+++ b/doc/03-Algorithm.tex
@@ -441,7 +441,7 @@ $|\beta| > \frac{3}{2} \max(|\alpha|, |\gamma|)$.
 Figure \ref{fig:examples3d} shows curated example curves for dimensions.
 Example \textit{i} shows a Gilbert curve of $(4 \times 4 \times 4)$, reducing to a Hilbert curve of the same dimension.
 Examples \textit{ii}, \textit{iii} and \textit{iv} show Gilbert curves of $(4 \times 4 \times 5)$, $(5 \times 5 \times 5)$
-and $(6 \times 6 \times 6)$ showing a $J_1$, $J_2$ and $J_0$ split, respecitvely.
+and $(6 \times 6 \times 6)$ showing a $J_1$, $J_2$ and $J_0$ split, respectively.
 An $S_0$, $S_2$ and $S_1$ split are showing in the \textit{v}, \textit{vi} and \textit{vii} Gilbert curves of
 lengths $(8 \times 4 \times 4)$, $(3 \times 5 \times 3)$ and $(3 \times 3 \times 5)$ respectively.
 A Gilbert curve with an unavoidable notch is 
